--- a/style.css
+++ b/style.css
@@ -12,10 +12,14 @@ body {
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
+  font-size: 1.1rem;
   color: black;
 
   display: flex;
   flex-direction: column;
+}
+a {
+  cursor: pointer;
 }
 .header {
   background-color: var(--main-bg);
@@ -80,5 +84,18 @@ body {
     height: 100vh;
     width: 100vw;
     line-height: 0;
+  }
+  button {
+    position: absolute;
+    bottom: 15%;
+    left: 70%;
+    padding: 10px 60px;
+    border-radius: 15px;
+    outline: unset;
+    border: unset;
+    background-color: red;
+    color: white;
+    font-weight: 600;
+    font-size: 2vw;
   }
 }
