--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
   width: 100vw;
   min-height: 100vh;
   margin: 0;
+  background-color: white;
 
   font-family: "Outfit", serif;
   font-optical-sizing: auto;
@@ -84,6 +85,7 @@ a {
     height: 100vh;
     width: 100vw;
     line-height: 0;
+    box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
   }
   button {
     position: absolute;
