--- a/style.css
+++ b/style.css
@@ -1,4 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
+@import url("https://use.typekit.net/tsf7ttw.css");
+@font-face {
+  font-family: "coconat";
+  src: url("font/Coconat-Regular.woff") format('woff'), 
+      url("font/Coconat-Regular.woff2") format('woff2');
+  font-weight: bold;
+  font-style: italic;
+}
 :root {
   --main-bg: #F9F8F3;
 }
@@ -7,9 +14,8 @@ body {
   width: 100vw;
   min-height: 100vh;
   margin: 0;
-  background-color: white;
+  background-color: var(--main-bg);
 
-  font-family: "Outfit", serif;
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
@@ -18,6 +24,7 @@ body {
 
   display: flex;
   flex-direction: column;
+  overflow: hidden;
 }
 a {
   cursor: pointer;
@@ -25,14 +32,20 @@ a {
 img {
   width: 100%;
 }
+h1,
+h2 {
+  margin: 0;
+  font-family: coconat;
+}
 header {
-  background-color: var(--main-bg);
   text-align: center;
   align-items: center;
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 1;
+  width: 0;
+  height: 0;
+  z-index: 10;
 
   input {
     display: none;
@@ -80,6 +93,9 @@ header {
   }
   .toggle:checked + .lbl-toggle + .header.other {
     transform: translateX(0);
+  }
+  .header {
+    background-color: var(--main-bg);
   }
   .header.other {
     display: flex;
@@ -187,7 +203,268 @@ header {
   }
 }
 .map {
-  width: 100%;
+  width: 100vw;
   height: 100vh;
-  background: url(images/map.png) center / cover no-repeat;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  padding: 0 0 0 70px;
+  box-sizing: border-box;
+
+  .info {
+    width: 100%;
+    max-width: 500px;
+    height: 80%;
+    max-height: 500px;
+    align-self: center;
+    background-color: white;
+    border: 1px solid black;
+    border-radius: 50px;
+    box-shadow: 4px 4px 8px 0 rgba(0, 0, 0, 0.5);
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    z-index: 1;
+
+    .infospanmap {
+      font-size: 40px;
+      text-align: center;
+      padding: 0 50px;
+    }
+  }
+  .houses.grid {
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: repeat(12, 1fr);
+    align-items: center;
+    background-image: url(images/map.png);
+    background-repeat: no-repeat;
+    background-position: 100% center;
+    background-size: cover;
+
+    .house {
+      all: unset;
+      justify-self: center;
+      cursor: pointer;
+      transition: transform .5s;
+
+      &:hover {
+        transform: scale(1.25);
+      }
+      .head {
+        width: 20px;
+        height: 20px;
+        border-radius: 50%;
+        background-color: red;
+      }
+      .body {
+        width: 20px;
+        height: 25px;
+        border-radius: 10px 10px 0 0;
+        background-color: red;
+        margin-top: -2px;
+      }
+      &.luca {
+        grid-column: 8/9;
+        grid-row: 6/7;
+
+        .head,
+        .body {
+          background-color: #81566C;
+        }
+      }
+      &.cosmos {
+        grid-column: 5/6;
+        grid-row: 8/9;
+
+        .head,
+        .body {
+          background-color: #81566C;
+        }
+      }
+      &.anker {
+        grid-column: 7/8;
+        grid-row: 6/7;
+
+        .head,
+        .body {
+          background-color: #AECB59;
+        }
+      }
+      &.miro {
+        grid-column: 6/7;
+        grid-row: 9/10;
+
+        .head,
+        .body {
+          background-color: #5BA5CC;
+        }
+      }
+      &.harmonie {
+        grid-column: 8/9;
+        grid-row: 5/6;
+
+        .head,
+        .body {
+          background-color: #D49882;
+        }
+      }
+      &.forum {
+        grid-column: 7/8;
+        grid-row: 7/8;
+
+        .head,
+        .body {
+          background-color: #EEA540;
+        }
+      }
+      &.vives {
+        grid-column: 2/3;
+        grid-row: 9/10;
+
+        .head,
+        .body {
+          background-color: #231F20;
+        }
+      }
+      &.bricoteam {
+        grid-column: 9/10;
+        grid-row: 5/6;
+
+        .head,
+        .body {
+          background-color: #EB583F;
+        }
+      }
+    }
+  }
+}
+
+.info {
+  .infoCard[style*="grid"] ~ .infospanmap {
+    display: none;
+  }
+  .infoCard {
+    display: grid;
+    grid-template-rows: 1fr 4fr 1fr 1fr 1fr;
+    gap: 15px;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    height: 100%;
+    width: 100%;
+    padding: 20px;
+    box-sizing: border-box;
+    position: relative;
+  
+    .linkToWebpage {
+      text-decoration: none;
+      color: black;
+      border: 1px solid black;
+      padding: 10px 50px 10px 30px;
+      border-radius: 50px;
+      position: relative;
+  
+      &::after {
+        content: ">";
+        position: absolute;
+        right: 10px;
+        top: 2px;
+        font-size: 32px;
+        font-weight: 200;
+      }
+    }
+    .adress {
+      display: flex;
+      flex-direction: column;
+    }
+    .person {
+      position: absolute;
+      top: -30px;
+      left: -30px;
+      .head {
+        width: 60px;
+        height: 60px;
+        border-radius: 50%;
+        background-color: red;
+      }
+      .body {
+        width: 70px;
+        height: 70px;
+        margin-left: -5px;
+        border-radius: 100px 100px 0 0;
+        background-color: red;
+        margin-top: -2px;
+      }
+    }
+  }
+  #luca {
+    .head,
+    .body {
+      background-color: #81566C;
+    }
+  }
+  #cosmos {
+    .head,
+    .body {
+      background-color: #81566C;
+    }
+  }
+  #anker {
+    .head,
+    .body {
+      background-color: #AECB59;
+    }
+  }
+  #miro {
+    .head,
+    .body {
+      background-color: #5BA5CC;
+    }
+  }
+  #harmonie {
+    .head,
+    .body {
+      background-color: #D49882;
+    }
+  }
+  #forum {
+    .head,
+    .body {
+      background-color: #EEA540;
+    }
+  }
+  #vives {
+    .head,
+    .body {
+      background-color: #231F20;
+    }
+  }
+  #bricoteam {
+    .head,
+    .body {
+      background-color: #EB583F;
+    }
+  }
+}
+.title {
+  position: absolute;
+  top: 50px;
+  left: calc(50% - 60px);
+
+  &::after {
+    content: "";
+    position: absolute;
+    top: -10px;
+    left: -25px;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: #F0A71E;
+    z-index: 1;
+  }
+  h2 {
+    z-index: 5;
+    position: relative;
+  }
 }
