--- a/style.css
+++ b/style.css
@@ -177,17 +177,16 @@ header {
     margin-top: 40px;
   }
 }
+canvas {
+  height: 100vh;
+  width: 100vw;
+  line-height: 0;
+}
 .canvasMain1 {
   display: flex;
   position: relative;
   background: url(images/_MG_9667.jpg) center / cover no-repeat;
-
-  #canvas1 {
-    height: 100vh;
-    width: 100vw;
-    line-height: 0;
-    box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
-  }
+  
   button {
     position: absolute;
     bottom: 15%;
