--- a/css/map.css
+++ b/css/map.css
@@ -1,3 +1,6 @@
+html {
+  overflow: hidden;
+}
 .no-scroll {
   header {
     height: 0;
@@ -204,7 +207,7 @@
       justify-content: center;
 
       img {
-        display: block;
+        display: block !important;
         height: fit-content;
       }
       .person {
@@ -342,5 +345,86 @@
   h2 {
     z-index: 5;
     position: relative;
+  }
+}
+@media (max-width: 1000px) {
+  .map {
+    display: grid;
+    grid-template-rows: auto 1fr;
+    padding-top: 0;
+    height: fit-content;
+
+    .houses.grid {
+      grid-row: 1/2;
+      margin: 0 auto;
+      img {
+        height: unset;
+        width: 100%;
+      }
+      & > div {
+        .house {
+          .head {
+            width: 3vw;
+            height: 3vw;
+            right: -0.1vw;
+            position: relative;
+          }
+          .body {
+            width: 3.2vw;
+            height: 4vw;
+          }
+        }
+      }
+    }
+    .info {
+      overflow: hidden;
+      h2 {
+        font-size: 5vw;
+      }
+      .infoCard {
+        max-width: 800px;
+        font-size: 3vw;
+        overflow: hidden;
+      }
+      .title {
+        position: relative;
+        top: 0;
+        left: 0;
+        width: 100%;
+        max-width: 800px;
+        padding: 0 2vw;
+        box-sizing: border-box;
+        display: none;
+
+        &::after {
+          width: 8vw;
+          height: 8vw;
+          left: -2vw;
+          top: -2vw;
+        }
+      }
+    }
+  }
+  .no-scroll .map-wr {
+    padding-top: 180px;
+    height: 100vh;
+    box-sizing: border-box;
+    overflow: hidden scroll;
+
+    & > .title {
+      position: relative;
+      left: 10vw;
+      width: fit-content;
+
+      h2 {
+        font-size: 7vw;
+      }
+      &::after {
+        width: 8vw;
+        height: 8vw;
+        left: -4vw;
+        top: -0.5vw;
+      }
+    }
   }
 }
