--- a/css/form.css
+++ b/css/form.css
@@ -43,11 +43,16 @@ header {
       flex-direction: column;
       padding: 2vw;
       gap: 1vw;
+      position: relative;
 
       & > div {
         display: flex;
         gap: 1vw;
         flex-direction: row;
+      }
+      .column {
+        position: absolute;
+        flex-direction: column;
       }
     }
     .upload {
@@ -127,5 +132,78 @@ header {
     display: block;
     height: 100%;
     width: unset;
+  }
+}
+@media (max-width: 1000px) {
+  .wrapper.form {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    img {
+      height: unset;
+      width: 100%;
+    }
+    & > div {
+      position: relative;
+      inset: unset;
+      display: grid;
+      padding: 0;
+      grid-template-rows: auto 1fr auto;
+      grid-template-columns: 1fr;
+    }
+    .motivation {
+      padding: 0;
+      align-items: center;
+      justify-content: center;
+
+      h2 {
+        font-size: 4vw;
+      }
+      span {
+        font-size: 3vw;
+      }
+    }
+    .form-job {
+      padding: 6vw;
+      gap: 3vw;
+
+      & > div {
+        gap: 3vw;
+      }
+      a,
+      button,
+      textarea,
+      input {
+        font-size: 3vw;
+        padding: 2vw;
+        border-radius: 3vw;
+        border: 4px solid black;
+      }
+      a {
+        padding: 2vw 3vw 2vw 5vw;
+
+        &::after {
+          width: 2vw;
+          height: 2vw;
+        }
+      }
+      a,
+      button {
+        &:hover {
+          border-color: transparent;
+        }
+      }
+      a:hover::after {
+        filter: invert(1);
+      }
+      .send {
+        border-color: transparent;
+
+        &:hover {
+          border-color: black;
+        }
+      }
+    }
   }
 }
